--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,7 @@
             My Gists</a></li>
     </ul></div>
     
-    <div style="border-left: 1px solid black; border-right: 1px solid black;
-    	float:left; width: 600px; min-height: 600px; background-color:
-    white;">
+    <div class="page_content">
     	{{ content }}
     </div>
     <div style="float: left; padding: 20px;">
