--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
     </style>
     
 </head>
-<body style="margin:0"><div style="margin-left: auto; margin-right: auto; width: 945px; height: 800px;">
+<body><div class="page">
     <div style="background-color: #444444; width: 100%;">
         <a href="/"> <img src="/images/cf_banner10.png" style="border:0; margin-left: 20px;"/> </a>
     </div>
