--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
     
 </head>
 <body><div class="page">
-    <div style="background-color: #444444; width: 100%;">
-        <a href="/"> <img src="/images/cf_banner10.png" style="border:0; margin-left: 20px;"/> </a>
+    <div class="page-header">
+        <a href="/"> <img src="/images/cf_banner10.png" /> </a>
     </div>
     <div>
     <ul class="menu">
