--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -16,8 +16,16 @@ body {
     background-color: #D3D3D3;
 }
 
+.page-header {
+    background-color: #444444;
+    width: 100%;
+}
 
-
+.page-header img {
+    border: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /* 
