--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -21,7 +21,7 @@ body {
     width: 100%;
 }
 
-.page-header img {
+.page-header a {
     border: 0;
     margin-left: auto;
     margin-right: auto;
