--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
     
 </head>
 <body><div class="page">
+    <div class="top_left">
     <div class="page-header">
         <a href="/"> <img src="/images/cf_banner10.png" /> </a>
     </div>
@@ -57,9 +58,10 @@
             My Gists</a></li>
     </ul></div>
     
-    <div class="page_content">
-    	{{ content }}
-    </div>
+      
+      <div class="page_content">
+      	  {{ content }}
+      </div>
     <div style="float: left; padding: 20px;">
     <!-- Test content -->
     <script src="http://widgets.twimg.com/j/2/widget.js"></script>
@@ -107,5 +109,5 @@
                                                                     }).render().setUser('theotherdylan').start();
                                                                     </script>
     </div> 
-</div></body>
+</div></div></body>
 </html>
