Attempting css3 corners

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,6 @@
     
 </head>
 <body><div class="page">
-    <div class="top_left">
     <div class="page-header">
         <a href="/"> <img src="/images/cf_banner10.png" /> </a>
     </div>
@@ -84,30 +83,18 @@
           links: '#070feb'
         }
       },
-	features:
-                                                                  {
+	features: {
 
-                                                                  scrollbar:
-                                                                  false,
-                                                                      loop:
-                                                                  false,
-                                                                      live:
-                                                                  false,
-
-                                                                  hashtags:
-                                                                  true,
-
-                                                                  timestamp:
-                                                                  true,
-
-                                                                  avatars:
-                                                                  false,
-
-                                                                  behavior:
-                                                                  'all'
-                                                                    }
-                                                                    }).render().setUser('theotherdylan').start();
-                                                                    </script>
+           scrollbar: false,
+           loop: false,
+           live: false,
+           hashtags: true,
+           timestamp: true,
+           avatars: false,
+           behavior: 'all'
+      }
+    }).render().setUser('theotherdylan').start();
+    </script>
     </div> 
-</div></div></body>
+</div></body>
 </html>
