--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -16,8 +16,9 @@ body {
     background-color: #D3D3D3;
 }
 
-.top-left {
-    background: url(/images/top_left.png) 0 100% no-repeat;
+div {
+    -moz-border-radius: 10px;
+    -webkit-boarder-radius: 10px;
 }
 
 .page-header {
