Add curvy corner to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
         background-color: #E0FFFF;
     }
   </style>
+  <script type="text/javascript" src="/js/curvycorners.js"> </script>
 </head>
 
 <body>
