--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -15,7 +15,7 @@ body {
     width: 960px;
     background-color: #D3D3D3;
     -moz-border-radius: 10px;
-    -webkit-boarder-radius: 10px;
+    -webkit-border-radius: 10px;
     border: 1px solid black;
 }
 
