--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -16,13 +16,13 @@ body {
     background-color: #D3D3D3;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
-    border: 1px solid black;
 }
 
 .page-header {
     background-color: #444444;
     width: 100%;
     height: 120px;
+    margin: 10px;
 }
 
 .page-header img {
