--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -22,7 +22,10 @@ body {
     background-color: #444444;
     width: 100%;
     height: 120px;
-    margin: 10px;
+    -moz-border-topleft: 10px;
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-topright: 10px;
+    -webkit-border-top-right-radius: 10px;
 }
 
 .page-header img {
