--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -23,6 +23,7 @@ body {
     background-color: #444444;
     width: 100%;
     height: 120px;
+    padding-top: 10px;
     -moz-border-radius-topleft: 10px;
     -webkit-border-top-left-radius: 10px;
     -moz-border-radius-topright: 10px;
@@ -47,8 +48,8 @@ body {
 
 
 .page_content {
-    border-left: 1px solid #AAAAAA;
-    border-right: 1px solid #AAAAAA;
+    margin-top: 10px;
+    border: 1px solid #AAAAAA;
     float: left;
     width: 596px;
     min-height: 600px;
