--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,13 @@
         font-size: 8pt;
         font-weight: bold;
         list-style-type: none;
-        width: 70px;
-        padding: 0px;
+        width: 50px;
+        padding: 10px;
         margin-top: 0px;
         margin-left: 0px;
         width: 100px;
         float: left;
+        border: 1px solid black;
     }
     ul.menu li {
         margin-left: 0px;
