--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,8 @@
         font-weight: bold;
         list-style-type: none;
         width: 50px;
-        padding: 10px;
-        margin-top: 0px;
-        margin-left: 0px;
+        padding: 0px;
+        margin: 10px;
         width: 100px;
         float: left;
         border: 1px solid black;
