--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,9 @@
         list-style-type: none;
         width: 48px;
         padding: 0px;
-        margin: 10px;
+        margin-left: 8px;
+        margin-right: 8px;
+        margin-top: 10px;
         width: 100px;
         float: left;
         border: 1px solid black;
