--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
         margin-top: 10px;
         width: 100px;
         float: left;
-        border: 1px solid black;
+        border: 1px solid #AAAAAA;
+        background-color: #EEEEEE;
     }
     ul.menu li {
         margin-left: 0px;
