Add soft corners;

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
     </div>
 
     <div>
-      <ul class="menu">
+      <ul class="menu soft-corners">
         <li><a href="http://github.com/dylan-evans" title=
         "Git Page">GitHub Page</a></li>
 
@@ -68,7 +68,7 @@
       </ul>
     </div>
 
-    <div class="page_content">
+    <div class="page_content soft-corners">
       {{ content }}
     </div>
 
