--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
         float: left;
         border: 1px solid #AAAAAA;
         background-color: #EEEEEE;
+        height: 120px;
     }
     ul.menu li {
         margin-left: 0px;
