--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
         border: 1px solid #AAAAAA;
         background-color: #EEEEEE;
         height: 120px;
+        padding-top: 10px;
+        padding-bottom: 5px;
     }
     ul.menu li {
         margin-left: 0px;
