--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,8 +66,9 @@
         <li><a href="http://github.com/dylan-evans" title=
         "Git Page">GitHub Page</a></li>
 
-        <li><a href="https://gist.github.com/dylan-evans" title=
+        <li><a href="http://gist.github.com/dylan-evans" title=
         "Code Snippets">My Gists</a></li>
+        <li><a href="/links" title="Some of my favourites">Links</a></li>
       </ul>
     </div>
 
@@ -77,9 +78,8 @@
 
     <div style="float: left; padding: 10px;">
       <!-- Test content -->
-      <script src="http://widgets.twimg.com/j/2/widget.js" type=
-      "text/javascript">
-</script> <script type="text/javascript">
+      <script src="http://widgets.twimg.com/j/2/widget.js" type="text/javascript"> </script> 
+      <script type="text/javascript">
 new TWTR.Widget({
       version: 2,
       type: 'profile',
