--- a/css/contentfree.css
+++ b/css/contentfree.css
@@ -11,6 +11,8 @@ body {
 .page {
     margin-left: auto;
     margin-right: auto;
+    min-height: 800px;
+    height: auto !important;
     height: 800px;
     width: 960px;
     background-color: #D3D3D3;
