Rename css file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href=
-  "/css/contentfree.css">
+  "/css/base.css">
   <link rel="icon" type="image/png" href="/images/cf_icon.png">
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
   <link rel="alternate" type="application/rss+xml" title=
