--- a/css/base.css
+++ b/css/base.css
@@ -149,4 +149,45 @@ a.ni:hover {
 
 a.ni:visited {
     color: red;
+}  
+
+.sidebar {
+    position: absolute;
+    height: 100%;
 }
+
+ul.menu {
+    font-family: arial;
+    font-size: 8pt;
+    font-weight: bold;
+    list-style-type: none;
+    width: 48px;
+        padding: 0px;
+        margin-left: 8px;
+        margin-right: 8px;
+        margin-top: 10px;
+        width: 100px;
+        float: left;
+        border: 1px solid #AAAAAA;
+        background-color: #EEEEEE;
+        height: 120px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+    }
+    ul.menu li {
+        margin-left: 0px;
+        padding-left: 0px;
+        margin: 0px;
+    }
+    ul.menu a {
+        text-decoration: none;
+        display: block;
+        padding: 2px;
+    }
+    ul.menu a:visitied {
+        color: blue;
+    }
+    ul.menu a:hover {
+        background-color: #E0FFFF;
+    }
+
