min-height hack attempt 2

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
     <div class="page-header">
       <a href="/"><img src="/images/cf_banner10.png"></a>
     </div>
+    <div class="prop"></div>
 
     <div>
       <ul class="menu soft-corners">
