--- a/css/base.css
+++ b/css/base.css
@@ -11,12 +11,14 @@ body {
 .page {
     margin-left: auto;
     margin-right: auto;
-    min-height: 800px;
+    min-height: 100%;
+    height: auto;
 /*    height: auto !important;
     height: 800px;*/
     width: 960px;
     background-color: #D3D3D3;
     border: 1px solid #A9A9C9;
+    overflow: hidden;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
 }
@@ -33,15 +35,17 @@ body {
     border-bottom: 3px groove #8B8B8B;
 }
 
-.prop {
-    float: right;
-    width: 1px;
-    height: 680px;
-}
 
 .soft-corners {
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
+}
+
+/* fix for the twitter widget */
+.twtr-doc {
+    -moz-border-radius: 10px !important;
+    -webkit-border-radius: 10px !important;
+    border-radius: 10px !important;
 }
 
 .page-header img {
@@ -50,25 +54,18 @@ body {
     /* margin-right: auto; */
 }
 
-
-/* 
-    Document   : contentfree.css
-    Created on : 07/04/2010, 8:00:23 PM
-    Author     : dylan
-    Description:
-        Basic move to unify segmented inline css
-*/
-
-
-
 .page_content {
     margin-top: 10px;
     border: 1px solid #AAAAAA;
     float: left;
     width: 596px;
     min-height: 600px;
+    height: auto !important;
+    height: 600px;
     background-color: white;
-    padding: 2px;
+    padding: 5px;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 
