--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     </div>
     <div class="prop"></div>
 
-    {% include menu %}
+    {% include menu.html %}
     
     <div class="page_content soft-corners">
       
