--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,6 +3,6 @@
     <li><a href="/" title="index page">Home</a></li>
     <li><a href="http://github.com/dylan-evans" title="Git Page">GitHub Page</a></li>
     <li><a href="http://gist.github.com/dylan-evans" title="Code Snippets">My Gists</a></li>
-    <li><a href="/links" title="Some of my favourites">Links</a></li>
+    <li><a href="/links.html" title="Some of my favourites">Links</a></li>
   </ul>
 </div>
