--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
   "/css/base.css">
   <link rel="icon" type="image/png" href="/images/cf_icon.png">
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
-  <link rel="alternate" type="application/rss+xml" title=
-  "Content Free Blog" href="http://contentfree.info/feeds/all">
-  <script type="text/javascript" src="/js/curvycorners.js"> </script>
+  <link rel="alternate" type="application/rss+xml" 
+    title="Content Free Blog" href="http://dylan-evans.github.com/rss.xml">
+  
 </head>
 
 <body>
@@ -66,5 +66,6 @@ new TWTR.Widget({
       </script>
     </div>
   </div>
+  <script type="text/javascript" src="/js/curvycorners.js"> </script>
 </body>
 </html>
