Fix of page footer;

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@ new TWTR.Widget({
       }).render().setUser('theotherdylan').start();
       </script>
     </div>
-  <div style="float:left; clear:both">Some comment here.</div>
+  <div class="page-footer">Some comment here.</div>
   </div>
   <script type="text/javascript" src="/js/curvycorners.js"> </script>
   
