--- a/css/base.css
+++ b/css/base.css
@@ -40,6 +40,14 @@ body {
     border-bottom: 3px groove #8B8B8B;
 }
 
+.page-footer {
+    float: left;
+    clear: both;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    font-size: small;
+    font-family: Arial;
+}
 
 .soft-corners {
     -moz-border-radius: 10px;
