--- a/css/base.css
+++ b/css/base.css
@@ -45,7 +45,7 @@ body {
     clear: both;
     margin-bottom: 10px;
     margin-left: 20px;
-    font-size: small;
+    font-size: x-small;
     font-family: Arial;
 }
 
@@ -62,8 +62,7 @@ body {
     border-radius: 10px !important;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
-    box-shadow: 8px 10px 10px rgba(0,0,0,0.5),
-   inset 8px 10px 10px rgba(255,255,255,0.75);
+    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
 }
 
 .page-header img {
@@ -84,8 +83,7 @@ body {
     padding: 5px;
     padding-bottom: 20px;
     margin-bottom: 10px;
-    box-shadow: 8px 10px 10px rgba(0,0,0,0.5),
-   inset 8px 10px 10px rgba(255,255,255,0.75);
+    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
 }
 
 
@@ -196,8 +194,7 @@ ul.menu {
     height: 120px;
     padding-top: 10px;
     padding-bottom: 5px;
-    box-shadow: 8px 10px 10px rgba(0,0,0,0.5),
-   inset 8px 10px 10px rgba(255,255,255,0.75);
+    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
 }
 
 ul.menu li {
