--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,9 @@ new TWTR.Widget({
       }).render().setUser('theotherdylan').start();
       </script>
     </div>
-  <div class="page-footer">Some comment here.</div>
+  <div class="page-footer"> 
+    Last Build: {{ site.time }}
+  </div>
   </div>
   <script type="text/javascript" src="/js/curvycorners.js"> </script>
   
