--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,8 @@ blog: true
     var disqus_shortname = 'contentfree';
 
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
-    var disqus_identifier = '{{post.id}}';
-    var disqus_url = 'http://dylan-evans.github.com/{{post.url}}';
+    var disqus_identifier = '{{page.url}}';
+    var disqus_url = 'http://dylan-evans.github.com{{page.url}}';
 
     (function() {
         var dsq = document.createElement('script'); 
