--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,5 +4,6 @@
     <li><a href="http://github.com/dylan-evans" title="Git Page">GitHub Page</a></li>
     <li><a href="http://gist.github.com/dylan-evans" title="Code Snippets">My Gists</a></li>
     <li><a href="/links.html" title="Some of my favourites">Links</a></li>
+    <li><a href="/quotes.html" title="Favourite quotes">Quotes</a></li>
   </ul>
 </div>
