add post and push updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,17 @@
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
   <link rel="alternate" type="application/rss+xml" 
     title="Content Free Blog" href="http://dylan-evans.github.com/rss.xml">
+  <!-- http://code.google.com/p/ie7-js/ -->
+  <script type="text/javascript" src="/js/IE9.js"></script>
+  <!-- http://www.useragentman.com/blog/csssandpaper-a-css3-javascript-library/ -->
+  <script type="text/javascript" src="/js/EventHelpers.js">
+  </script>
+  <script type="text/javascript" src="/js/cssQuery-p.js">
+  </script>
+  <script type="text/javascript" src="/js/jcoglan.com/sylvester.js">
+  </script>
+  <script type="text/javascript" src="/js/cssSandpaper.js">
+  </script>
   
 </head>
 
