--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ blog: true
 ---
 <div class="post">{{content}}</div>
 
+<div class="disqus">
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'contentfree';
@@ -22,3 +23,4 @@ blog: true
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+</div>
