--- a/css/base.css
+++ b/css/base.css
@@ -23,6 +23,7 @@ body {
     border-radius: 20px;
     box-shadow: 8px 10px 10px rgba(0,0,0,0.5),
    inset 4px 10px 10px rgba(255,255,255,0.85);
+    -sand-box-shadow: 8px 10px 10px;
     zoom: 1;
     overflow: hidden; /* I don't know why this works! */
 }
