Fixes cssSandpaper links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,15 @@
   <link rel="alternate" type="application/rss+xml" 
     title="Content Free Blog" href="http://dylan-evans.github.com/rss.xml">
   <!-- http://code.google.com/p/ie7-js/ -->
-  <script type="text/javascript" src="/js/IE9.js"></script>
+  <script type="text/javascript" src="/js/IE9.js">IE7_PNG_SUFFIX=".png";</script>
   <!-- http://www.useragentman.com/blog/csssandpaper-a-css3-javascript-library/ -->
-  <script type="text/javascript" src="/js/EventHelpers.js">
+  <script type="text/javascript" src="/js/cssSandpaper/EventHelpers.js">
   </script>
-  <script type="text/javascript" src="/js/cssQuery-p.js">
+  <script type="text/javascript" src="/js/cssSandpaper/cssQuery-p.js">
   </script>
-  <script type="text/javascript" src="/js/jcoglan.com/sylvester.js">
+  <script type="text/javascript" src="/js/cssSandpaper/jcoglan.com/sylvester.js">
   </script>
-  <script type="text/javascript" src="/js/cssSandpaper.js">
+  <script type="text/javascript" src="/js/cssSandpaper/cssSandpaper.js">
   </script>
   
 </head>
