Fixes theme select

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <div>
-  <ul class="menu soft-corners">
+  <ul id="menu" class="module">
     <li><a href="/" title="index page">Home</a></li>
     <li><a href="http://github.com/dylan-evans" title="Git Page">GitHub Page</a></li>
     <li><a href="http://gist.github.com/dylan-evans" title="Code Snippets">My Gists</a></li>
