Adds ie6nomore.com links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,8 @@
     <div id="sidebar-left">
         {% include menu.html %}
     
+        {% include ie6nomore.html %}
+    
         {% include theme_select.html %}
     </div>
     <div class="page_content soft-corners">
