--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,42 +45,11 @@
       {{ content }}
       
     </div>
-
-    <div style="float: left; padding: 10px;">
-      <!-- Test content -->
-      <script src="http://widgets.twimg.com/j/2/widget.js" type="text/javascript"> </script> 
-      <script type="text/javascript">
-new TWTR.Widget({
-      version: 2,
-      type: 'profile',
-      rpp: 4,
-      interval: 6000,
-      width: 200,
-      height: 300,
-      theme: {
-        shell: {
-          background: '#ababab',
-          color: '#ffffff'
-        },
-        tweets: {
-          background: '#ffffff',
-          color: '#000000',
-          links: '#070feb'
-        }
-      },
-        features: {
-
-           scrollbar: false,
-           loop: false,
-           live: false,
-           hashtags: true,
-           timestamp: true,
-           avatars: false,
-           behavior: 'all'
-      }
-      }).render().setUser('theotherdylan').start();
-      </script>
+    
+    <div id="sidebar-right">
+        {% include twitter.html %}
     </div>
+    
   <div class="page-footer"> 
     Last Build: {{ site.time }}
   </div>
