Adds about link

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,5 +5,6 @@
     <li><a href="http://gist.github.com/dylan-evans" title="Code Snippets">My Gists</a></li>
     <li><a href="/links.html" title="Some of my favourites">Links</a></li>
     <li><a href="/quotes.html" title="Favourite quotes">Quotes</a></li>
+    <li><a href="/about.html" title="About this site">About</a></li>
   </ul>
 </div>
