Adds blog widget and corrects css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
     
         {% include theme_select.html %}
     </div>
-    <div class="page_content soft-corners">
+    <div id="page-content" class="soft-corners">
       {% include ie6nomore.html %}
       {{ content }}
       
