No cache meta tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 
 <html>
 <head>
-  <meta name="generator" content=
-  "HTML Tidy for Linux/x86 (vers 6 November 2007), see www.w3.org">
-
+  <meta name="generator" content="HTML Tidy for Linux/x86 (vers 6 November 2007), see www.w3.org">
+  <meta http-equiv="cache-control" content="no-cache">
+   
   <title>{{ page.title }}</title>
   <link id="base-style" rel="stylesheet" type="text/css" href="/css/base.css">
   <link rel="icon" type="image/png" href="/images/cf_icon.png">
