fix tracker for my lan

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
   <div class="page-footer"> 
     Last Build: {{ site.time }}
   </div>
-  <img alt="SUPER SECRET TRACKER" src="http://home.contentfree.info/super_secret_tracker.png?url={{page.url}}"/>
+  <img alt="SUPER SECRET TRACKER" src="http://home.contentfree.info:8000/super_secret_tracker.png?url={{page.url}}"/>
   
   </div>
  
