--- a/css/font_test.css
+++ b/css/font_test.css
@@ -101,8 +101,13 @@ img {
     -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
-    font-family: .Lucida Sans Unicode., .Lucida Grande., sans-serif;
+    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-size: small; /* Arial only seems to ever look ok in small or bold form */
     behavior: url(/js/PIE.htc);
+}
+
+#page-content h1,h2,h3,h4,h5 {
+    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 #blog-widget {
