--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,8 @@
   <div class="page-footer"> 
     Last Build: {{ site.time }}
   </div>
-  <img alt="SUPER SECRET TRACKER" src="http://home.contentfree.info:8000/super_secret_tracker.png?url={{page.url}}"/>
-  
+<!--  <img alt="SUPER SECRET TRACKER" src="http://home.contentfree.info:8000/super_secret_tracker.png?url={{page.url}}"/>
+  -->
   </div>
  
 </body>
