Adds glass theme

--- a/_includes/theme_select.html
+++ b/_includes/theme_select.html
@@ -12,6 +12,7 @@ Select/Change the current theme
             <option value="base.css">Default</option>
             <option value="test.css">Test</option>
             <option value="font_test.css">Font test</option>
+            <option value="glass.css">Glass</option>
         </select>
     </form>
     
