--- a/css/alien.css
+++ b/css/alien.css
@@ -5,7 +5,7 @@
 
 body {
     margin: 10px;
-    background-color: #8080C0;
+    background-color: black;
 }
 
 .page {
@@ -15,17 +15,8 @@ body {
     height: auto;
 /*    height: auto !important;
     height: 800px;*/
-    width: 960px;
-    background-image: url(/images/header-bg.png);
-    background-repeat: no-repeat;
-    background-color: #D3D3D3;
 
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-    box-shadow: 8px 10px 10px rgba(0,0,0,0.5),
-   inset 4px 10px 10px rgba(255,255,255,0.85);
-    -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
+    background-color: black;
     zoom: 1;
     overflow: hidden; /* I don't know why this works! */
     behavior: url(/js/PIE.htc);
@@ -100,7 +91,7 @@ img {
     margin-bottom: 10px;
     -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
-    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 50px rgba(128,255,128,1);
     font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
     font-size: small; /* Arial only seems to ever look ok in small or bold form */
     behavior: url(/js/PIE.htc);
@@ -172,6 +163,7 @@ a.ni:visited {
     width: 120px;
     min-height: 400px;
     overflow: hidden;
+    margin-right: 50px;
 }
 
 #sidebar-left .module {
@@ -182,8 +174,7 @@ a.ni:visited {
     font-size: 8pt;
     width: 100px;
     min-height: 50px;
-    border: 1px solid #AAAAAA;
-    background-color: #EEEEEE;
+    background-color: rgb(50,100,200);
     margin-left: 8px;
     padding: 0px;
     padding-top: 10px;
@@ -191,9 +182,8 @@ a.ni:visited {
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
-    -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
-    box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 30px rgba(128,255,128,1);
+
     behavior: url(/js/PIE.htc);
 }
 
@@ -205,6 +195,7 @@ a.ni:visited {
 }
 
 ul.menu {
+    
     font-family: arial;
     font-size: 8pt;
     font-weight: bold;
@@ -228,12 +219,14 @@ ul.menu {
     margin-left: 0px;
     padding-left: 5px;
     margin: 0px;
+    
 }
     
 #menu a {
     text-decoration: none;
     display: block;
     padding: 2px;
+    color: #00EE00;
 }
 
 #menu a:visit   ed {
@@ -241,7 +234,7 @@ ul.menu {
 }
 
 #menu a:hover {
-    background-color: #E0FFFF;
+    text-shadow: 0px 0px 5px rgba(156, 255, 0, 1);
 }
 
 #theme-select {
