--- a/css/alien.css
+++ b/css/alien.css
@@ -44,9 +44,9 @@ img {
 }
 
 .soft-corners {
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
 }
 
 /* fix for the twitter widget */
@@ -54,17 +54,21 @@ img {
     -moz-border-radius: 10px !important;
     -webkit-border-radius: 10px !important;
     border-radius: 10px !important;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
     box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     -webkit-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     -moz-box-shadow: 8px 10px 10px rgba(0,0,0,0.5);
     behavior: url(/js/PIE.htc); 
+    margin-left: 50px;
+    box-shadow: 0px 0px 30px rgba(0,255,0,1);
+    opacity: 0.8;
 }
 
 .disqus {
     zoom: 1; /* IE trick */
+    
 }
 
 #disqus_thread {
@@ -160,9 +164,7 @@ a.ni:visited {
 /* define the left sidebar */
 #sidebar-left {
     float: left;
-    width: 120px;
     min-height: 400px;
-    overflow: hidden;
     margin-right: 50px;
 }
 
@@ -175,14 +177,16 @@ a.ni:visited {
     width: 100px;
     min-height: 50px;
     background-color: rgb(50,100,200);
-    margin-left: 8px;
+    margin-left: 20px;
+    margin-top: 20px;
     padding: 0px;
+    padding: 20px;
     padding-top: 10px;
     padding-bottom: 5px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 30px rgba(128,255,128,1);
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 30px rgba(0,255,0,1);
 
     behavior: url(/js/PIE.htc);
 }
@@ -239,11 +243,10 @@ ul.menu {
 
 #theme-select {
     font-weight: bold;
-    padding-left: 4px !important;
 }
 
 #sidebar-right {
-
+    margin-left: 50px;
 }
 
 #sidebar-right module {
