--- a/css/base.css
+++ b/css/base.css
@@ -108,6 +108,7 @@ img {
 
 #page-content h1,h2,h3,h4,h5 {
     font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+    text-shadow: 1px 2px 3px #888;
 }
 
 #blog-widget {
