Adds author tags, removes comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-  <meta name="generator" content="HTML Tidy for Linux/x86 (vers 6 November 2007), see www.w3.org">
   <meta http-equiv="cache-control" content="no-cache">
+  <meta name="author" content="Dylan Evans, dylan@dje.me"/>
    
   <title>{{ page.title }}</title>
   <link id="base-style" rel="stylesheet" type="text/css" href="/css/base.css">
@@ -11,19 +11,7 @@
   <link rel="apple-touch-icon" href="/images/cf_icon.png">
   <link rel="alternate" type="application/rss+xml" 
     title="Content Free Blog" href="http://dylan-evans.github.com/rss.xml">
-  <!-- http://code.google.com/p/ie7-js/ -->
-<!--  <script type="text/javascript" src="/js/IE9.js">IE7_PNG_SUFFIX=".png";</script>
-
-  <!-- http://www.useragentman.com/blog/csssandpaper-a-css3-javascript-library/
-  <script type="text/javascript" src="/js/cssSandpaper/EventHelpers.js">
-  </script>
-  <script type="text/javascript" src="/js/cssSandpaper/cssQuery-p.js">
-  </script>
-  <script type="text/javascript" src="/js/cssSandpaper/jcoglan.com/sylvester.js">
-  </script>
-  <script type="text/javascript" src="/js/cssSandpaper/cssSandpaper.js">-->
-  <!-- <script type="text/javascript" src="/js/curvycorners.js"> </script>
-  -->
+  
   </script>
   
 </head>
@@ -31,7 +19,7 @@
 <body>
   <div class="page">
     <div class="page-header">
-      <a href="/"><img src="/images/cf_banner10.png"></a>
+      <a href="/"><img alt="CONTENT FREE" src="/images/cf_banner10.png"></a>
     </div>
     <div class="prop"></div>
 
@@ -51,10 +39,8 @@
     </div>
     
   <div class="page-footer"> 
-    Last Build: {{ site.time }}
+    Last Build: {{ site.time }} by <a href="mailto:dylan@dje.me">Dylan Evans</a>
   </div>
-<!--  <img alt="SUPER SECRET TRACKER" src="http://home.contentfree.info:8000/super_secret_tracker.png?url={{page.url}}"/>
-  -->
   </div>
  
 </body>
